# prisma-certification

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py  signature_routes.py
app/core/: config.py  logger.py
app/repositories/: example_repository.py  signature_repository.py  template_repository.py
app/schemas/: catalog.py  certificate.py  signature.py
app/services/: catalog_service.py  certificate_service.py  example_service.py  pdf_service.py  signature_service.py  template_render_service.py  template_validator.py
app/utils/: file_utils.py
scripts/: upload_signature_template.py
scripts/signature_template/: README.md  config.json  styles.css  template.html
tests/: test_health.py
