[project]
name = "certificate-service"
version = "0.1.0"
description = "Microservicio para generación de certificados"
authors = [
    { name = "Jonathan Campos Lozano", email = "jc222209@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2,<0.136.0",
    "uvicorn>=0.42.0,<0.43.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.13.1,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "boto3>=1.42.83,<2.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "weasyprint>=68.1,<69.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "ruff>=0.15.8,<0.16.0",
    "pre-commit>=4.5.1,<5.0.0",
    "httpx>=0.28.1,<0.29.0"
]